<?xml version="1.0" encoding="utf-8"?>

<!--
    Fragment RepoListFragment: Используется для любых устройств и любых режимов экрана.
-->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layout_padding"
    tools:context="ru.roskvartal.garry.githubviewerfrag.view.RepoListFragment">

    <!-- Лого приложения -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/github_logo"
        android:contentDescription="@string/img_logo_desc"
        android:background="@drawable/text_border" />

    <!-- Ввод имени пользователя -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_vertical"
        android:background="@drawable/text_border">

        <EditText
            android:id="@+id/editUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/btnEnter"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignTop="@+id/btnEnter"
            android:layout_toLeftOf="@+id/btnEnter"
            android:layout_toStartOf="@+id/btnEnter"
            android:inputType="textPersonName"
            android:hint="@string/user_name_hint" />

        <ImageButton
            android:id="@+id/btnEnter"
            android:src="@drawable/octicon_search_vec"
            android:layout_width="@dimen/btn_icon_size"
            android:layout_height="@dimen/btn_icon_size"
            android:scaleType="centerInside"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/btn_enter_desc" />
    </RelativeLayout>

    <!-- Титл списка -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/list_label"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/color_app_logo_text"
        android:layout_marginTop="@dimen/margin_vertical"
        android:background="@drawable/text_border" />

    <!-- Список перозиториев пользователя -->
    <ListView
        android:id="@+id/listRepo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="@dimen/margin_vertical"
        android:background="@drawable/text_border" />

    <!-- Copyright -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/app_copyright"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:layout_marginTop="@dimen/margin_vertical"
        android:textColor="@color/color_app_logo_text"
        android:background="@drawable/text_border" />
</LinearLayout>
